support for sequence to sequence; rearrangement for easier maintaining

--- a/train_and_stats.ipynb
+++ b/train_and_stats.ipynb
@@ -9,64 +9,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  545\n",
-      "Available :  43948\n",
-      "True\n",
       "Cannot import zuko. Continuing without prior\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n",
-      "_open_ht_hv_2_256_laplace_8_h1\n",
-      "models/new_model/out_8_eps_-4/laplace/ht_hv/h1/model_open_ht_hv_2_256_laplace_8_h1\n",
-      "\n",
-      " VALIDATION MODE \n",
-      "\n",
+      "_open_lt_lv_2_256_laplace_8_h7\n",
+      "models/new_model/out_8_eps_-4/laplace/lt_lv/h7/model_open_lt_lv_2_256_laplace_8_h7\n",
       "\n",
       "Data loaded\n",
       "\n",
-      "Loading model :  models/new_model/out_8_eps_-4/laplace/ht_hv/h1/model_open_ht_hv_2_256_laplace_8_h150.pt\n",
-      "Loaded model\n",
+      "Epoch :  0 Test loss recursive :  -1.49920095205307y usage : 6614 MB, loaded 900    \n",
+      "Epoch :  1 Test loss recursive :  -1.5455427193641662usage : 6627 MB, loaded 900    \n",
+      "Epoch :  2 Test loss recursive :  -1.5722382640838624usage : 6628 MB, loaded 900    \n",
+      "Epoch :  3 Test loss recursive :  -1.5729693841934205usage : 6629 MB, loaded 900    \n",
+      "Epoch :  4 Test loss recursive :  -1.5723575806617738usage : 6633 MB, loaded 900    \n",
+      "Epoch :  5 Test loss recursive :  -1.5676700115203857usage : 6634 MB, loaded 900    \n",
+      "Epoch :  6 Test loss recursive :  -1.5731121516227722usage : 6636 MB, loaded 900    \n",
+      "Epoch :  7 Test loss recursive :  -1.5737843799591065usage : 6637 MB, loaded 900    \n",
+      "Epoch :  8 Test loss recursive :  -1.569270956516266 usage : 6638 MB, loaded 900    \n",
+      "Epoch :  9 Test loss recursive :  -1.5737464785575868usage : 6642 MB, loaded 900    \n",
+      "Epoch :  10 Test loss recursive :  -1.5734447240829468sage : 6646 MB, loaded 900    \n",
+      "Epoch :  11 Test loss recursive :  -1.572179651260376usage : 6653 MB, loaded 900    \n",
+      "Epoch :  12 Test loss recursive :  -1.5715507864952087sage : 6658 MB, loaded 900    \n",
+      "Epoch :  13 Test loss recursive :  -1.5732648849487305sage : 6663 MB, loaded 900    \n",
+      "Epoch :  14 Test loss recursive :  -1.5730287432670593sage : 6667 MB, loaded 900    \n",
+      "Epoch :  15 Test loss recursive :  -1.5737705326080322sage : 6672 MB, loaded 900    \n",
+      "Epoch :  16 Test loss recursive :  -1.5712516212463379sage : 6677 MB, loaded 900    \n",
+      "Epoch :  17 Test loss recursive :  -1.573076753616333usage : 6682 MB, loaded 900    \n",
+      "Epoch :  18 Test loss recursive :  -1.5738290190696715sage : 6687 MB, loaded 900    \n",
+      "Epoch :  19 Test loss recursive :  -1.5736327743530274sage : 6692 MB, loaded 900    \n",
+      "Epoch :  20 Test loss recursive :  -1.5736352586746216sage : 6697 MB, loaded 900    \n",
+      "Epoch :  21 Test loss recursive :  -1.5738533711433411sage : 6702 MB, loaded 900    \n",
+      "Epoch :  22 Test loss recursive :  -1.5731782031059265sage : 6706 MB, loaded 900    \n",
+      "Epoch :  23 Test loss recursive :  -1.5737005138397218sage : 6711 MB, loaded 900    \n",
+      "Epoch :  24 Test loss recursive :  -1.5733373427391053sage : 6716 MB, loaded 900    \n",
+      "Epoch :  25 Test loss recursive :  -1.5739181995391847sage : 6721 MB, loaded 900    \n",
+      "Epoch :  26 Test loss recursive :  -1.5741754794120788sage : 6726 MB, loaded 900    \n",
+      "Epoch :  27 Test loss recursive :  -1.573707277774811usage : 6731 MB, loaded 900    \n",
+      "Epoch :  28 Test loss recursive :  -1.5727340388298034sage : 6735 MB, loaded 900    \n",
+      "Epoch :  29 Test loss recursive :  -1.573913972377777usage : 6740 MB, loaded 900    \n",
+      "Epoch :  30 Test loss recursive :  -1.5739597511291503sage : 6745 MB, loaded 900    \n",
+      "Epoch :  31 Test loss recursive :  -1.5741777896881104sage : 6750 MB, loaded 900    \n",
+      "Epoch :  32 Test loss recursive :  -1.5731637907028198sage : 6755 MB, loaded 900    \n",
+      "Epoch :  33 Test loss recursive :  -1.5730502772331239sage : 6760 MB, loaded 900    \n",
+      "Epoch :  34 Test loss recursive :  -1.574044017791748usage : 6765 MB, loaded 900    \n",
+      "Epoch :  35 Test loss recursive :  -1.5729307842254638sage : 6769 MB, loaded 900    \n",
+      "Epoch :  36 Test loss recursive :  -1.573608593940735usage : 6774 MB, loaded 900    \n",
+      "Epoch :  37 Test loss recursive :  -1.5718203806877136sage : 6779 MB, loaded 900    \n",
+      "Epoch :  38 Test loss recursive :  -1.574010829925537usage : 6784 MB, loaded 900    \n",
+      "Epoch :  39 Test loss recursive :  -1.573555245399475usage : 6789 MB, loaded 900    \n",
+      "Epoch :  40 Test loss recursive :  -1.5735099697113037sage : 6794 MB, loaded 900    \n",
+      "Epoch :  41 Test loss recursive :  -1.5740760779380798sage : 6799 MB, loaded 900    \n",
+      "Epoch :  42 Test loss recursive :  -1.574255232810974usage : 6803 MB, loaded 900    \n",
+      "Epoch :  43 Test loss recursive :  -1.5730269312858582sage : 6808 MB, loaded 900    \n",
+      "Epoch :  44 Test loss recursive :  -1.572118844985962usage : 6813 MB, loaded 900    \n",
+      "Epoch :  45 Test loss recursive :  -1.5739227938652038sage : 6818 MB, loaded 900    \n",
+      "Epoch :  46 Test loss recursive :  -1.573589837551117usage : 6823 MB, loaded 900    \n",
+      "Epoch :  47 Test loss recursive :  -1.5741380333900452sage : 6828 MB, loaded 900    \n",
+      "Epoch :  48 Test loss recursive :  -1.5722350144386292sage : 6832 MB, loaded 900    \n",
+      "Epoch :  49 Test loss recursive :  -1.5735520887374879sage : 6837 MB, loaded 900    \n",
+      "Epoch :  50 Test loss recursive :  -1.5709171676635743sage : 6842 MB, loaded 900    \n",
       "\n",
       "Finished training\n",
       "\n",
-      "_open_lt_hv_2_256_laplace_8_h1\n",
-      "models/new_model/out_8_eps_-4/laplace/lt_hv/h1/model_open_lt_hv_2_256_laplace_8_h1\n",
-      "\n",
-      " VALIDATION MODE \n",
-      "\n",
-      "\n",
-      "Data loaded\n",
-      "\n",
-      "Loading model :  models/new_model/out_8_eps_-4/laplace/lt_hv/h1/model_open_lt_hv_2_256_laplace_8_h150.pt\n",
-      "Loaded model\n",
-      "\n",
-      "Finished training\n",
-      "\n",
-      "_open_lt_lv_2_256_laplace_8_h1\n",
-      "models/new_model/out_8_eps_-4/laplace/lt_lv/h1/model_open_lt_lv_2_256_laplace_8_h1\n",
-      "\n",
-      " VALIDATION MODE \n",
-      "\n",
-      "\n",
-      "Data loaded\n",
-      "\n",
-      "Loading model :  models/new_model/out_8_eps_-4/laplace/lt_lv/h1/model_open_lt_lv_2_256_laplace_8_h150.pt\n",
-      "Loaded model\n",
-      "\n",
-      "Finished training\n",
-      "\n",
-      "_open_ht_lv_2_256_laplace_8_h1\n",
-      "models/new_model/out_8_eps_-4/laplace/ht_lv/h1/model_open_ht_lv_2_256_laplace_8_h1\n",
-      "\n",
-      " VALIDATION MODE \n",
-      "\n",
-      "\n",
-      "Data loaded\n",
-      "\n",
-      "Loading model :  models/new_model/out_8_eps_-4/laplace/ht_lv/h1/model_open_ht_lv_2_256_laplace_8_h150.pt\n",
-      "Loaded model\n",
-      "\n",
-      "Finished training\n",
-      "\n"
+      "Arriving data\n",
+      "torch.Size([50, 98, 100, 4])\n",
+      "torch.Size([50, 98, 100, 5])\n",
+      "Processed data\n",
+      "torch.Size([50, 97, 100, 4])\n",
+      "torch.Size([50, 97, 100, 4])\n",
+      "Done\n"
      ]
     }
    ],
@@ -78,20 +89,20 @@
     "pre_separated = False #if three subfolders already exist for train test and val\n",
     "override = False #make this true to always use the same ones\n",
     "\n",
-    "extensions = [\"_open_ht_hv\", \"_open_lt_hv\", \"_open_lt_lv\", \"_open_ht_lv\"]\n",
+    "extensions = [\"_open_lt_lv\"]#, \"_open_lt_hv\", \"_open_lt_lv\", \"_open_ht_lv\"]\n",
     "number_of_messages = [2]#[1,2,3,4]\n",
     "size_of_messages = [256]#[64, 128]\n",
-    "epochs = 0\n",
+    "epochs = 51\n",
     "distribs = [\"laplace\"]#[\"laplace\", \"normal\"]\n",
     "outs = [8]#[4,8]\n",
-    "horizon = 1\n",
+    "horizon = 7\n",
     "\n",
     "for extension in extensions:\n",
     "    for number_of_message in number_of_messages:\n",
     "        for size_of_message in size_of_messages:\n",
     "            for distrib in distribs:\n",
     "                for out in outs:\n",
-    "                    run(load_all, pre_separated, override, extension, number_of_message, size_of_message, epochs, distrib, out, horizon, validation=False)"
+    "                    run(load_all, pre_separated, override, extension, number_of_message, size_of_message, epochs, distrib, out, horizon, validation=False, many_many=False)"
    ]
   }
  ],
