fixing a major problem in the passing of masks to compute the edges, they were not passed for the generation of the data and it lead to very bad links being created, removing them improves the results tremendously

--- a/train_and_stats_real.ipynb
+++ b/train_and_stats_real.ipynb
@@ -14,54 +14,11 @@
       "Cannot import simulator\n",
       "_2_128_normal_h4_leave0\n",
       "models/real/normal/h4/model_2_128_normal_h4_leave0\n",
-      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
-      "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5\n",
-      "Length:  4\n",
-      "Pathes for training :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
-      "Pathes for testing :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
-      "\n",
-      "Data loaded\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO][2023/07/18 02:39:07 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5...\n",
-      "[INFO][2023/07/18 02:39:07 PM] Loading tracks/obj_type_1\n",
-      "[INFO][2023/07/18 02:39:07 PM] Loading objects/obj_type_1 (855, 5) (855 filtered: None)\n",
-      "[INFO][2023/07/18 02:39:07 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded model\n",
-      "\n",
-      "Finished training\n",
-      "\n",
-      "Found 19 cells\n",
-      "Found 17 cells without gaps\n",
-      "Found  694  valid values\n",
-      "Filling rate :  0.8164705882352942\n",
-      "Arriving data\n",
-      "torch.Size([1, 47, 13, 8])\n",
-      "torch.Size([1, 47, 13, 9])\n",
-      "Processed data\n",
-      "torch.Size([1, 46, 13, 4])\n",
-      "torch.Size([1, 46, 13, 4])\n",
-      "Done\n",
-      "_2_128_normal_h4_leave1\n",
-      "models/real/normal/h4/model_2_128_normal_h4_leave1\n",
-      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
+      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
       "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5\n",
       "Length:  4\n",
       "Pathes for training :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
       "Pathes for testing :\n",
       "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5']\n",
       "\n",
@@ -73,116 +30,131 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO][2023/07/18 02:39:17 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5...\n",
-      "[INFO][2023/07/18 02:39:17 PM] Loading tracks/obj_type_1\n",
-      "[INFO][2023/07/18 02:39:17 PM] Loading objects/obj_type_1 (2527, 5) (2527 filtered: None)\n",
-      "[INFO][2023/07/18 02:39:17 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5\n"
+      "[INFO][2023/07/18 03:26:31 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5...\n",
+      "[INFO][2023/07/18 03:26:31 PM] Loading tracks/obj_type_1\n",
+      "[INFO][2023/07/18 03:26:31 PM] Loading objects/obj_type_1 (2527, 5) (2527 filtered: None)\n",
+      "[INFO][2023/07/18 03:26:31 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model\n",
       "\n",
       "Finished training\n",
       "\n",
       "Found 81 cells\n",
       "Found 68 cells without gaps\n",
       "Found  2007  valid values\n",
-      "Filling rate :  0.5902941176470589\n",
-      "Arriving data\n",
-      "torch.Size([1, 47, 33, 8])\n",
-      "torch.Size([1, 47, 33, 9])\n",
-      "Processed data\n",
-      "torch.Size([1, 46, 33, 4])\n",
-      "torch.Size([1, 46, 33, 4])\n",
-      "Done\n",
-      "_2_128_normal_h4_leave2\n",
-      "models/real/normal/h4/model_2_128_normal_h4_leave2\n",
-      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
-      "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5\n",
-      "Length:  4\n",
-      "Pathes for training :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
-      "Pathes for testing :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5']\n",
-      "\n",
-      "Data loaded\n",
-      "\n"
+      "Filling rate :  0.5902941176470589\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO][2023/07/18 02:39:27 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5...\n",
-      "[INFO][2023/07/18 02:39:27 PM] Loading tracks/obj_type_1\n",
-      "[INFO][2023/07/18 02:39:27 PM] Loading objects/obj_type_1 (3005, 5) (3005 filtered: None)\n",
-      "[INFO][2023/07/18 02:39:27 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5\n"
+      "[INFO][2023/07/18 03:26:41 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5...\n",
+      "[INFO][2023/07/18 03:26:41 PM] Loading tracks/obj_type_1\n",
+      "[INFO][2023/07/18 03:26:41 PM] Loading objects/obj_type_1 (3647, 5) (3647 filtered: None)\n",
+      "[INFO][2023/07/18 03:26:41 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model\n",
-      "\n",
-      "Finished training\n",
-      "\n",
-      "Found 109 cells\n",
-      "Found 81 cells without gaps\n",
-      "Found  1966  valid values\n",
-      "Filling rate :  0.4854320987654321\n",
-      "Arriving data\n",
-      "torch.Size([1, 47, 27, 8])\n",
-      "torch.Size([1, 47, 27, 9])\n",
-      "Processed data\n",
-      "torch.Size([1, 46, 27, 4])\n",
-      "torch.Size([1, 46, 27, 4])\n",
       "Done\n",
-      "_2_128_normal_h4_leave3\n",
-      "models/real/normal/h4/model_2_128_normal_h4_leave3\n",
-      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
+      "_2_128_normal_h4_leave1\n",
+      "models/real/normal/h4/model_2_128_normal_h4_leave1\n",
+      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
       "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5\n",
       "Length:  4\n",
       "Pathes for training :\n",
-      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5']\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
       "Pathes for testing :\n",
       "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5']\n",
       "\n",
       "Data loaded\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO][2023/07/18 02:39:36 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5...\n",
-      "[INFO][2023/07/18 02:39:36 PM] Loading tracks/obj_type_1\n",
-      "[INFO][2023/07/18 02:39:36 PM] Loading objects/obj_type_1 (3647, 5) (3647 filtered: None)\n",
-      "[INFO][2023/07/18 02:39:36 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded model\n",
+      "\n",
       "\n",
       "Finished training\n",
       "\n",
       "Found 296 cells\n",
       "Found 224 cells without gaps\n",
       "Found  2235  valid values\n",
-      "Filling rate :  0.19955357142857144\n",
-      "Arriving data\n",
-      "torch.Size([1, 47, 37, 8])\n",
-      "torch.Size([1, 47, 37, 9])\n",
-      "Processed data\n",
-      "torch.Size([1, 46, 37, 4])\n",
-      "torch.Size([1, 46, 37, 4])\n",
+      "Filling rate :  0.19955357142857144\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO][2023/07/18 03:26:51 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5...\n",
+      "[INFO][2023/07/18 03:26:51 PM] Loading tracks/obj_type_1\n",
+      "[INFO][2023/07/18 03:26:51 PM] Loading objects/obj_type_1 (3005, 5) (3005 filtered: None)\n",
+      "[INFO][2023/07/18 03:26:51 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "_2_128_normal_h4_leave2\n",
+      "models/real/normal/h4/model_2_128_normal_h4_leave2\n",
+      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
+      "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5\n",
+      "Length:  4\n",
+      "Pathes for training :\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
+      "Pathes for testing :\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5']\n",
+      "\n",
+      "Data loaded\n",
+      "\n",
+      "\n",
+      "Finished training\n",
+      "\n",
+      "Found 109 cells\n",
+      "Found 81 cells without gaps\n",
+      "Found  1966  valid values\n",
+      "Filling rate :  0.4854320987654321\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO][2023/07/18 03:27:00 PM] Opening HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5...\n",
+      "[INFO][2023/07/18 03:27:00 PM] Loading tracks/obj_type_1\n",
+      "[INFO][2023/07/18 03:27:00 PM] Loading objects/obj_type_1 (855, 5) (855 filtered: None)\n",
+      "[INFO][2023/07/18 03:27:00 PM] Closing HDF file: /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "_2_128_normal_h4_leave3\n",
+      "models/real/normal/h4/model_2_128_normal_h4_leave3\n",
+      "Found paths:  ['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
+      "Leaving out:  /mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5\n",
+      "Length:  4\n",
+      "Pathes for training :\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_72.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_18.h5', '/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_25.h5']\n",
+      "Pathes for testing :\n",
+      "['/mnt/c/Users/gille/Desktop/graph-displacement/data/cell_data/cell_data/tracks_12.h5']\n",
+      "\n",
+      "Data loaded\n",
+      "\n",
+      "\n",
+      "Finished training\n",
+      "\n",
+      "Found 19 cells\n",
+      "Found 17 cells without gaps\n",
+      "Found  694  valid values\n",
+      "Filling rate :  0.8164705882352942\n",
       "Done\n"
      ]
     }
